# dados_financeiros

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: dadosBolsaValores.py
src/controller/: dadosFinanceirosController.py
src/controller/Financeiro/: paginaCalendarioController.py  paginaListaObervacaoController.py
src/controller/Financeiro/Analises_Financeiras/: analise_financeira_cotacao_tempo_controller.py  paginaListaObervacaoController.py  pagina_analise_economica_da_empresa_controller.py  pagina_analise_financeira_ibovespa_versus_dolar_controller.py
src/controller/Financeiro/Mercado/: paginaAnaliseFinanceiraController.py  paginaMercadoController.py
src/controller/Inicio/: paginaInicioController.py
src/model/: dadosFinanceirosModel.py
src/model/pages/: paginaCalendarioModel.py
src/model/pages/Analises_Financeiras/: analise_financeira_cotacao_tempo_model.py  paginaListaObservacaoModel.py  pagina_analise_economica_da_empresa_model.py  pagina_analise_financeira_ibovespa_versus_dolar_model.py
src/model/pages/Mercado/: paginaAnaliseFinanceiraModel.py
src/view/: dadosFinanceirosView.py  index.py
src/view/Financeiro/: lista_observacao.py
src/view/Financeiro/pages/: paginaCalendarioView.py  paginaListaObservacaoView.py
src/view/Financeiro/pages/Analises_Financeiras/: analise_financeira_cotacao_tempo_view.py  paginaListaObservacaoView.py  pagina_analise_economica_da_empresa_view.py  (+1 more)
src/view/Inicio/: paginaInicialView.py
styles/: paginaCalendarioCSS.css  paginaMercadoCSS.css  styles.css
(+2 files in other folders)
