[tool.poetry]
name = "dados-financeiros"
version = "0.1.0"
description = ""
authors = ["Marcos Keller <marcoskeller@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

